feat:auth结构修改
